<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.MainActivity">

    <Button
        android:id="@+id/select_video_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_video"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/extract_audio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extract_audio"
        android:layout_below="@id/select_video_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/play_audio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_audio"
        android:layout_below="@id/extract_audio_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/preprocess_audio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preprocess_audio"
        android:layout_below="@id/play_audio_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/audio_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_info"
        android:layout_below="@id/preprocess_audio_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/status_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select_video"
        android:layout_below="@id/audio_info_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

</RelativeLayout>
